# Langchain-Vector-Store

./: langchain-chroma.ipynb  main.py  pyproject.toml  requirements.txt
my_chroma_db/: chroma.sqlite3
